[package]
name = "snet"
version = "0.1.0"
authors = ["Kristoffer Ödmark"]
readme = "README.md"
description = "Small tool that will forward bytes from a serialport to a serialport, unsecure and one-directional"
edition = "2018"
license = "MIT"
repository = "https://github.com/TotalKrill/snet"

[dependencies]
bus = "2.0.0"
clap = "2.32.0"
serialport = "3.0.0"
